<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:visibility="visible"
    android:id="@+id/SVMoveInventory"
    android:background="@color/background">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="rick.damselflysolutions.com.inventoryscan.MainActivity"
        android:background="@color/background">




        <EditText
            android:layout_height="30dp"
            android:inputType="date|time"
            android:ems="10"
            android:id="@+id/strDate"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:text="@string/strDate"
            android:layout_marginBottom="5dp"
            android:background="@android:color/background_light"
            android:clickable="false"
            android:textSize="16sp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="300dp"
            android:enabled="false"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/llLocation"
            android:layout_below="@+id/strDate"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:labelFor="@+id/txtLocation"
            android:layout_marginTop="5dp">

            <TextView
                android:text="@string/strLocation"
                android:id="@+id/strLocation"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:textStyle="normal|bold"
                android:layout_width="0dp"
                android:textSize="18sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/txtLocation"
                android:background="@android:color/background_light"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llItem"
            android:layout_below="@+id/llLocation"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp">

            <TextView
                android:text="@string/strItem"
                android:layout_height="wrap_content"
                android:id="@+id/strItem"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:textStyle="normal|bold"
                android:layout_width="0dp"
                android:labelFor="@+id/txtItem"
                android:textSize="18sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:inputType="text|textCapCharacters"
                android:ems="10"
                android:id="@+id/txtItem"
                android:background="@android:color/background_light"
                android:layout_gravity="center_vertical"
                 />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCount"
            android:layout_below="@+id/llUoM"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp">

            <TextView
                android:text="@string/strCount"
                android:layout_height="wrap_content"
                android:id="@+id/strCount"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:textStyle="normal|bold"
                android:layout_width="0dp"
                android:labelFor="@+id/txtCount"
                android:textSize="18sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/txtCount"
                android:background="@android:color/background_light"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llButtons"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="400dp">

            <Button
                android:text="@string/btnExit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/btnExit"
                android:layout_weight="1" />

            <Button
                android:text="@string/btnReview"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/btnReview"
                android:layout_weight="1" />

            <Button
            android:text="@string/btnAccept"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/btnAccept"
            android:layout_weight="1"
                android:visibility="gone" />

            <Button
                android:text="@string/btnAppend"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/btnAppend"
                android:layout_weight="1"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llQuantity"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/llCount"
            android:gravity="right"
            android:layout_marginTop="5dp"
            android:weightSum="1">

            <TextView
                android:text="@string/strQuantity"
                android:layout_height="wrap_content"
                android:id="@+id/strQuantity"
                android:textStyle="normal|bold"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:labelFor="@+id/txtQty"
                android:textSize="18sp" />

            <EditText
                android:layout_height="30dp"
                android:ems="10"
                android:id="@+id/txtQty"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:background="@android:color/background_light"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llUoM"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/llItem"
            android:layout_alignParentStart="true"
            android:labelFor="@+id/spnUom"
            android:layout_marginTop="5dp">

            <TextView
                android:text="@string/strUoM"
                android:layout_height="wrap_content"
                android:id="@+id/strUoM"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:textStyle="normal|bold"
                android:layout_width="0dp"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spnUom"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:entries="@array/UnitsOfMeasue"
                android:background="@android:color/background_light"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:contextClickable="true" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</ScrollView>