<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:visibility="visible"
    android:id="@+id/SVMoveInventory"
    android:background="@color/background">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="rick.damselflysolutions.com.inventoryscan.Review"
        android:background="@color/background">

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true" />

        <FrameLayout
            android:id="@+id/flTop"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_height="360dp">

            <ListView
                android:id="@+id/lvReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </ListView>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/llButtons"
            android:layout_below="@id/flTop"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_alignBaseline="@+id/flTop">


            <Button
                android:text="@string/btnReview"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/btnReview"
                android:layout_weight="1" />

            <Button
                android:text="@string/btnNotScan"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/btnNotScan"
                android:layout_weight="1" />

            <Button
                android:text="@string/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/btnBack"
                android:layout_weight="1" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>